# geris

./: .gitignore  CMakeLists.txt  README.md
src/: fileio.h  main.cpp  main.cpp~  resources.qrc
src/qml/: main.qml  main.qml.bak  main.qml~
